# teams-bot

./: README.md
bot/: README.md  generate_png.py  manifest.py  pyproject.toml
bot/src/: app.py  bot.py  config.py
bot/team_manifest/: manifest.json
